--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,5 +1,4 @@
-#summary One-sentence summary of this page.
-
+#summary DSP Emulator
 = Introduction =
 
 DSP Emulator v0.9ß3 by Leniad Soft 2001-2010
